--- a/src/main/resources/templates/user/MyPage.html
+++ b/src/main/resources/templates/user/MyPage.html
@@ -11,16 +11,13 @@
         type: 'GET', // GET 요청 방식
         data: { conNum: conNum }, // 쿼리스트링으로 conNum 전송
         success: function(response) {
-            // 요청이 성공했을 때 처리할 로직
-            console.log("서버 응답: ", response);
-            alert("결과를 성공적으로 가져왔습니다.");
 
-            // 응답 결과를 HTML에 표시 (예: 특정 섹션에 결과 표시)
-            $("#resultSection").html(response);
+            // 응답 결과에서 contestNum을 가져와서 URL에 포함
+            window.location.href = '/users/contest/result?contestNum=' + response.conNum;
+
         },
         error: function(xhr, status, error) {
-            console.error('결과를 가져오는 중 오류 발생: ', error);
-            alert("결과를 가져오는 중 오류가 발생했습니다.");
+            alert("콘테스트가 진행 중입니다. 모집 기간 종료 후 결과를 확인할 수 있습니다!");
         }
     });
 }
