--- a/src/main/resources/static/css/list/contestList.css
+++ b/src/main/resources/static/css/list/contestList.css
@@ -37,13 +37,6 @@ main
     width: 1200px;
 }
 
-.banner
-{
-    height: 100px;
-    background-color: var(--line-gray);
-    border-radius: 6px;
-}
-
 .listHead
 {
     height: 198px;
@@ -214,3 +207,46 @@ section
     font-size: var(--font-size-12);
     margin-bottom: 0;
 }
+/*
+
+#ajax_area {
+    */
+/* AJAX 결과를 표시할 영역 스타일 *//*
+
+    margin-top: 20px;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    padding: 15px;
+}
+*/
+
+.pagination {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.pagination li {
+    list-style: none;
+}
+
+.pagination a {
+    display: block; /* li 전체를 클릭 가능하게 하기 위해 block으로 설정 */
+    background-color: white;
+    color: gray; /* a 태그의 색상 */
+    text-decoration: none;
+    border:none;
+}
+
+.pagination a:hover {
+    color: black;
+    background-color: white;
+    font-weight: bold;
+}
+
+.pagination .active a {
+    font-weight: bold; /* 현재 페이지의 텍스트를 굵게 표시 */
+    background-color: rgb(193, 192, 255); /* 현재 페이지의 배경색 변경 */
+    color: black; /* 텍스트 색상 */
+}
+
