--- a/src/main/resources/static/css/list/portfolioList.css
+++ b/src/main/resources/static/css/list/portfolioList.css
@@ -158,3 +158,32 @@
         font-size: var(--font-size-16);
         font-weight: 900;
     }
+    .pagination {
+        display: flex;
+        justify-content: center;
+        margin-top: 20px;
+    }
+
+    .pagination li {
+        list-style: none;
+    }
+
+    .pagination a {
+        display: block; /* li 전체를 클릭 가능하게 하기 위해 block으로 설정 */
+        background-color: white;
+        color: gray; /* a 태그의 색상 */
+        text-decoration: none;
+        border:none;
+    }
+
+    .pagination a:hover {
+        color: black;
+        background-color: white;
+        font-weight: bold;
+    }
+
+    .pagination .active a {
+        font-weight: bold; /* 현재 페이지의 텍스트를 굵게 표시 */
+        background-color: rgb(193, 192, 255); /* 현재 페이지의 배경색 변경 */
+        color: black; /* 텍스트 색상 */
+    }
