레이아웃연결
레이아웃연결

--- a/src/main/resources/templates/list/applyInfDetail.html
+++ b/src/main/resources/templates/list/applyInfDetail.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="/fragments/layout">
+      layout:decorate="~{/fragments/layout}">
 <head>
     <link rel="stylesheet" th:href="@{/css/list/applyInfDetail.css}">
     <script th:src="@{/js/list/applyInfDetail.js}"></script>
