--- a/src/main/resources/static/css/list/applicationWrite.css
+++ b/src/main/resources/static/css/list/applicationWrite.css
@@ -116,7 +116,7 @@ form
     margin-bottom: 10px;
 }
 
-input[type="text"]
+.appinput
 {
     width: 100%;
     height: 50px;
@@ -213,14 +213,14 @@ textarea
     overflow-y: hidden;
 }
 
-button
+/*.apply
 {
     width: 100%;
     height: 70px;
     margin-top: 20px;
     border-radius: 6px;
     cursor: pointer;
-}
+}*/
 
 .temporary
 {
@@ -236,23 +236,10 @@ button
     border: 1px solid var(--color-black);
     color: var(--color-white);
     font-size: var(--font-size-16);
-}
-
-
-/* footer 영역 */
-footer
-{
-    height: 322px;
-    border-top: 1px solid var(--line-gray);
-}
-.oc{
+    width: 100%;
+    height: 70px;
     margin-top: 20px;
+    border-radius: 6px;
+    cursor: pointer;
 }
-.oc .open{
-    background-color: white;
-    border: 2px solid whitesmoke;
-}
-.oc .close{
-    background-color: white;
-    border: 2px solid whitesmoke;
-}
+
