--- a/src/main/resources/templates/list/applicationWrite.html
+++ b/src/main/resources/templates/list/applicationWrite.html
@@ -6,13 +6,6 @@
     <meta charset="UTF-8">
     <title>페이지</title>
 
-    <!-- jQuery 추가 -->
-    <script src="https://code.jquery.com/jquery-3.6.4.js"
-            integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
     <!-- 커스텀 CSS 및 JS 추가 -->
     <link rel="stylesheet" th:href="@{/css/list/applicationWrite.css}">
     <link rel="stylesheet" th:href="@{/css/fragments/header.css}">
@@ -45,7 +38,7 @@
                 <form>
                     <input type="hidden" id="conNum" name="conNum" th:value="${contestDTO.id}">
                     <div class="applyContent">
-                        <input type="text" name="applyTitle" placeholder="제목을 입력해주세요." required>
+                        <input class="appinput" type="text" name="applyTitle" placeholder="제목을 입력해주세요." required>
                         <div class="contArea">
                             <div class="imgArea"></div>
                             <div class="textArea"></div>
