--- a/src/main/resources/templates/user/portfolioDetail.html
+++ b/src/main/resources/templates/user/portfolioDetail.html
@@ -18,7 +18,7 @@
                     </div><!--portfolioMain-->
 
                     <div class="description">
-                        <div class="title">
+                        <div class="title" th:text="${portFolio.title}">
                             담벼리
                         </div>
                         <h5>포토폴리오 소개</h5>
@@ -28,7 +28,7 @@
                             <!-- 이미지 파일 출력될 부분 -->
                         </div>
                         <div class="title">포토폴리오 설명</div>
-                        <div class="content">
+                        <div class="content" th:text="${portFolio.content}">
                             담벼리라는 이름은 담 + 벼리의 합성어입니다.
                             벼리라는 뜻은 어떤 일이나 일의 뼈대를 이루는 줄거리를 말하는 순 우리말입니다.
                             집의 입구인 대문과, 집을 두르는 담장은 나의 공간, 우리의 공간이라는 가치를 더욱 높여주는 역할을 합니다.
@@ -43,13 +43,13 @@
                     <figure>
                         <div class="title">디자이너 정보</div>
                         <div class="info">
-                            <div class="user">waylog</div>
+                            <div class="user" th:text="${portFolio.userNickname}">waylog</div>
                             <div class="user more">
                                 디자이너 소개
                                 <i class="fa-solid fa-angle-down"></i>
                             </div>
                         </div>
-                        <div class="profileInfo">
+                        <div class="profileInfo" th:text="${portFolio.profileIntroduce}">
                             웨이로그디자인은 심플하고 감각적인 디자인을 추구합니다. : )
                             남들과는 다른 한끗을 살려 고객님의 브랜드에 전문성과 퀄리티를 높이기 위해 책임감을 가지고 작업합니다.
                             심플하면서 의미를 가득 살린 웨이로그만의 디자인으로 내 브랜드에 감성을 더해가세요 : )
