--- a/src/main/resources/static/css/chat/chatRoom.css
+++ b/src/main/resources/static/css/chat/chatRoom.css
@@ -1,18 +1,12 @@
-* {
+/** {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-}
-
-body {
-  font-family: Arial, sans-serif;
-  background-color: #f2f3f5;
-}
+}*/
 
 .container {
   display: flex;
-  height: 100vh;
-  width: 100vw;
+  width: 1000px;
 }
 
 /* 채팅 목록 */
@@ -81,14 +75,16 @@ body {
   display: flex;
   flex-direction: column;
   background-color: #f2f3f5;
+  height: 700px;
 }
 
 .chat-header {
-  padding: 15px;
+  padding: 30px;
   background-color: #fff;
   border-bottom: 1px solid #e6e6e6;
   display: flex;
   justify-content: space-between;
+  background-color:rgb(193, 192, 255);
   align-items: center;
 }
 
@@ -126,7 +122,7 @@ body {
 
 .message-bubble.sent {
   background-color: #C1C0FF;
-  color: white;
+  color: black;
   border-bottom-right-radius: 0;
 }
 
@@ -156,7 +152,7 @@ body {
 
 .chat-footer button {
   background-color: #C1C0FF;
-  color: white;
+  color: black;
   border: none;
   padding: 10px 20px;
   border-radius: 20px;
@@ -166,7 +162,6 @@ body {
 .chat-footer button:hover {
   background-color: #e65c00;
 }
-
 
 .exit-button {
   position: absolute;
@@ -181,5 +176,5 @@ body {
 }
 
 .exit-button:hover {
-  background-color: #d32f2f;
+  background-color: rgb(193, 192, 255);
 }
