--- a/src/main/resources/templates/chat/chatRoom.html
+++ b/src/main/resources/templates/chat/chatRoom.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{/fragments/layout}">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chat Room</title>
     <!-- StompJS CDN -->
     <script src="https://cdn.jsdelivr.net/npm/@stomp/stompjs@7.0.0/bundles/stomp.umd.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<!--    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>-->
     <script src="/js/chat/chatRoom.js" defer></script>
     <link rel="stylesheet" href="/css/chat/chatRoom.css" />
   </head>
-  <body>
+  <th:block layout:fragment="content">
     <div class="container">
       <!-- 채팅 목록 -->
     
@@ -32,5 +33,5 @@
         </div>
       </div>
     </div>
-  </body>
+  </th:block>
 </html>
