--- a/src/main/resources/static/css/chat/chatRoom.css
+++ b/src/main/resources/static/css/chat/chatRoom.css
@@ -1,8 +1,3 @@
-/** {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}*/
 
 .container {
   display: flex;
@@ -24,6 +19,20 @@
   text-align: center;
   font-size: 18px;
   font-weight: bold;
+}
+
+.receiver {
+    width: 50px; /* 원하는 너비로 설정 */
+    height: 50px; /* 원하는 높이로 설정 */
+    border-radius: 50%; /* 동그란 이미지로 만들기 */
+    object-fit: cover; /* 이미지가 영역을 채우도록 */
+    margin-right: 10px; /* 이미지와 텍스트 사이의 간격 */
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* 그림자 효과 */
+}
+
+.receiver, .chat-title {
+    display: inline-flex; /* 두 요소를 나란히 배치 */
+    align-items: center; /* 이미지와 텍스트를 세로로 가운데 정렬 */
 }
 
 .chat-item {
@@ -83,9 +92,10 @@
   background-color: #fff;
   border-bottom: 1px solid #e6e6e6;
   display: flex;
-  justify-content: space-between;
+  /*justify-content: space-between;*/
   background-color:rgb(193, 192, 255);
   align-items: center;
+  display: flex;
 }
 
 .chat-header .chat-title {
