이벤트 리스트 수정
이벤트 리스트, 이벤트 작성, 이벤트 뷰 페이지 안함

--- a/src/main/resources/templates/notifications/eventList.html
+++ b/src/main/resources/templates/notifications/eventList.html
@@ -45,7 +45,7 @@
                             <p class="card-text">
                                 <small class="text-muted">
                                     <span th:text="'생성일: ' + ${event.formattedCreateTime}"></span><br>
-                                    <span th:text="'이벤트 기간: ' + ${event.formattedStartDate} + ' ~ ' + ${event.formattedEndDate}"></span>
+                                    <span th:utext="'이벤트 기간 ' + '<br>' + ${event.formattedStartDate} + ' ~ ' + ${event.formattedEndDate}"></span>
                                 </small>
                             </p>
 
