--- a/src/main/resources/static/css/user/portfolioDetail.css
+++ b/src/main/resources/static/css/user/portfolioDetail.css
@@ -75,8 +75,8 @@ section
 
 .portfolioMain .img1
 {
-    max-width: 100%;
-    max-height: 100%
+    width: 100%;
+    height: 100%
 }
 
 .description .title
