--- a/src/main/resources/templates/notifications/noticeList.html
+++ b/src/main/resources/templates/notifications/noticeList.html
@@ -108,20 +108,20 @@
         </div>
 
         <!-- Pagination Controls -->
-<!--        <nav aria-label="Page navigation example" th:if="${totalPages != null and totalPages > 0}">-->
-<!--            <ul class="pagination justify-content-center">-->
-<!--                <li class="page-item" th:classappend="${currentPage == 1} ? 'disabled'">-->
-<!--                    <a class="page-link" th:href="@{/notice/list(page=${currentPage - 1})}">&laquo;</a>-->
-<!--                </li>-->
-<!--                <li class="page-item" th:each="i : ${#numbers.sequence(1, totalPages)}"-->
-<!--                    th:classappend="${i == currentPage} ? 'active'">-->
-<!--                    <a class="page-link" th:href="@{/notice/list(page=${i})}" th:text="${i}"></a>-->
-<!--                </li>-->
-<!--                <li class="page-item" th:classappend="${currentPage == totalPages} ? 'disabled'">-->
-<!--                    <a class="page-link" th:href="@{/notice/list(page=${currentPage + 1})}">&raquo;</a>-->
-<!--                </li>-->
-<!--            </ul>-->
-<!--        </nav>-->
+        <nav aria-label="Page navigation example" th:if="${totalPages != null and totalPages > 0}">
+            <ul class="pagination justify-content-center">
+                <li class="page-item" th:classappend="${currentPage == 1} ? 'disabled'">
+                    <a class="page-link" th:href="@{/notice/list(page=${currentPage - 1})}">&laquo;</a>
+                </li>
+                <li class="page-item" th:each="i : ${#numbers.sequence(1, totalPages)}"
+                    th:classappend="${i == currentPage} ? 'active'">
+                    <a class="page-link" th:href="@{/notice/list(page=${i})}" th:text="${i}"></a>
+                </li>
+                <li class="page-item" th:classappend="${currentPage == totalPages} ? 'disabled'">
+                    <a class="page-link" th:href="@{/notice/list(page=${currentPage + 1})}">&raquo;</a>
+                </li>
+            </ul>
+        </nav>
 
         <!-- 등록 버튼 -->
         <div class="buttons" th:if="${userRole == 'ROLE_ADMIN'}">
