--- a/src/main/resources/static/css/notifications/noticeList.css
+++ b/src/main/resources/static/css/notifications/noticeList.css
@@ -134,3 +134,31 @@ tr.toggle-row.active-toggle td {
 }
 
 
+/* 현재 페이지 링크 (활성화된 페이지) */
+.pagination .page-item.active .page-link {
+    background-color: black;
+    border-color: black;
+    color: white;
+    font-weight: bold;
+}
+
+/* 기본 페이지 링크 스타일 */
+.pagination .page-link {
+    color: black;
+}
+
+/* 페이지 링크 호버 시 스타일 */
+.pagination a:hover {
+    color: black;
+    background-color: white;
+    font-weight: bold;
+}
+
+/* 활성화된 페이지의 a 태그 스타일 */
+.pagination .active a {
+    font-weight: bold;
+    background-color: rgb(193, 192, 255);
+    color: black;
+}
+
+
